--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
   background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(Image/james-barr-zy5JTdcC0fE-unsplash\ 1.png);
   background-size: cover;
   background-position: center;
+  margin-bottom: 10px;
 }
 .navbar {
   display: flex;
@@ -56,4 +57,41 @@ button:hover {
   top: 100px;
   left: 70px;
   font-weight: bold;
+}
+.About {
+  display: inline-block;
+  position: absolute;
+  top: -10px;
+  margin-left: 10px;
+  
+
+}
+.seconddiv {
+  position: relative;
+
+}
+.project {
+  position: absolute;
+  top: 40px;
+  display: inline-block;
+  margin-left: 10px;
+  line-height: 24px;
+  font-size: 16px; 
+}
+.wrapper {
+  position: relative;
+}
+.Gallery {
+  position: absolute;
+  left: 600px;
+  top: -80px;
+  line-height: 10px;
+}
+.branch {
+  position: absolute;
+  top: -45px;
+  left: 550px;
+}
+.threepics {
+  margin-top: 90px;
 }
